--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,25 @@
-web:
-  build: .
+logstash:
+  image: logstash
+  restart: always
+  command: /docker-entrypoint.sh logstash -e "input { syslog { port => 5514 type => syslog } } output { stdout { } elasticsearch { cluster => "escluster" host => \"es\" }}"
   ports:
-   - "5000:5000"
-  volumes:
-   - .:/code
+    - 514:5514/udp
+    - 514:5514
+kibana:
+  image: kibana
+  restart: always
+  ports:
+    - 5601:5601
   links:
-   - redis
-redis:
-  image: redis
+    -  elasticsearch:elasticsearch
+esdata:
+   dockerfile: Dockerfile-ESDATA
+elasticsearch:
+  image: elasticsearch
+  restart: always
+  command: elasticsearch --node.name="ESNode" --cluster.name=escluster
+  expose:
+    - 9200
+    - 9300
+  volumes_from:
+    - esdata
