--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ kibana:
   links:
     -  elasticsearch:elasticsearch
 esdata:
+ container_name: esdata
    dockerfile: Dockerfile-ESDATA
 elasticsearch:
   image: elasticsearch
