--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,3 @@
-logstash:
-  image: logstash
-  restart: always
-  command: /docker-entrypoint.sh logstash -e "input { syslog { port => 5514 type => syslog } } output { stdout { } elasticsearch { cluster => "escluster" host => \"es\" }}"
-  ports:
-    - 514:5514/udp
-    - 514:5514
-kibana:
-  image: kibana
-  restart: always
-  ports:
-    - 5601:5601
-  links:
-    -  elasticsearch:elasticsearch
 elasticsearch:
   image: elasticsearch
   restart: always
@@ -21,3 +7,19 @@ elasticsearch:
     - 9300
   volumes_from:
     - esdata
+logstash:
+  image: logstash
+  restart: always
+  command: /docker-entrypoint.sh logstash -e "input { syslog { port => 5514 type => syslog } } output { stdout { } elasticsearch { cluster => "escluster" host => \"es\" }}"
+  ports:
+    - 514:5514/udp
+    - 514:5514
+  links:
+    - elasticsearch:es
+kibana:
+  image: kibana
+  restart: always
+  ports:
+    - 5601:5601
+  links:
+    - elasticsearch:elasticsearch
